--- a/inded.html
+++ b/inded.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Cards</title>
+    <title>Animated flex Cards</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="box">
-            <h1>Hello World</h1>
+    <div class="wrapper">
+        <div class="container">
+            <input type="radio" name="slide" id="c1" checked>
+            <label for="c1" class="card">
+                <div class="row">
+                    
+                </div>
+            </label>
         </div>
     </div>
+    <script src="Jscript/script.js"></script>
 </body>
 </html>
